2007-05-01  J. Tang  <jtang@tresys.com>

	* Added apol_avrule_query_set_all_perms().  This changes the
	behavior when matching multiple permissions.

2007-04-30  J. Tang  <jtang@tresys.com>

	* Added --enable-swig-tcl flag to configure script.

2007-04-25  J. Tang  <jtang@tresys.com>

	* Official release of SETools-3.2.

2007-04-20  J. Tang  <jtang@tresys.com>

	* Added seaudit_log_parse_buffer(), needed because
	seaudit_log_parse() is not possible with the Java SWIG library.

	* Build system updated to suppress warnings from automake
	1.10, and for parallel compilation (i.e., make -j).

2007-04-18  J. Mowery  <jmowery@tresys.com>

	* The function apol_domain_trans_result_create_from_domain_trans_result()
	  is now publicly exported. Also added is apol_domain_trans_result_destroy()
	  to free memory used by duplicated results.

2007-04-17  J. Tang  <jtang@tresys.com>

	* Fixed potential segfault in seaudit_filter_set_date() when
	called using the same struct tm pointers that were returned by
	seaudit_filter_get_date().  The old code would dereference
	memory that was just free()d.

2007-04-16  J. Tang  <jtang@tresys.com>

	* apol_mls_range_get_levels() fixed so that its returned levels
	only include categories that are valid for the given policy.
	Before it just copied the categories for the high level, even if a
	lower level could not actually have one of those categories.

	* apol_mls_level_get_cats() now always returns categories in
	alphabetical order.

2007-04-06  J. Tang  <jtang@tresys.com>

	* Added seaudit_avc_message_get_name() and
	seaudit_sort_by_name().  seaudit now shows AVC messages' name
	field; this column may be be hidden through the updated
	preferences dialog.

	* Updated libqpol to use libsepol >= 2.0.0 if available.
	configure should be able to autodetect this.

2007-04-05  J. Tang  <jtang@tresys.com>

	* sediffx now allows the user to select which components to diff,
	rather than always diffing everything.
