@@ -1415,14 +1415,14 @@ int main(int argc, char **argv)
 	apol_vector_destroy(&mod_module_paths);
 
 	orig_policy =
-		apol_policy_create_from_policy_path(orig_pol_path, ((flags & POLDIFF_DIFF_RULES) ? 0 : APOL_POLICY_OPTION_NO_RULES),
+		apol_policy_create_from_policy_path(orig_pol_path, ((flags & POLDIFF_DIFF_RULES) ? 0 : QPOL_POLICY_OPTION_NO_RULES),
 						    NULL, NULL);
 	if (!orig_policy) {
 		ERR(NULL, "%s", strerror(errno));
 		goto err;
 	}
 	mod_policy =
-		apol_policy_create_from_policy_path(mod_pol_path, ((flags & POLDIFF_DIFF_RULES) ? 0 : APOL_POLICY_OPTION_NO_RULES),
+		apol_policy_create_from_policy_path(mod_pol_path, ((flags & POLDIFF_DIFF_RULES) ? 0 : QPOL_POLICY_OPTION_NO_RULES),
 						    NULL, NULL);
 	if (!mod_policy) {
 		ERR(NULL, "%s", strerror(errno));
